@@ -220,9 +220,16 @@ def test_remove_attr(hlwm):
     hlwm.call_xfail('get_attr ' + attr_path)
 
 
-def test_substitute(hlwm):
+@pytest.mark.parametrize('command_prefix', [
+    ['substitute', 'ARG', 'tags.count'],
+    ['foreach', 'ARG', 'clients']
+])
+def test_metacommand(hlwm, command_prefix):
+    """test the completion of a command that accepts another
+    command as the parameter
+    """
     cmdlist = hlwm.call('list_commands').stdout.splitlines()
-    assert hlwm.complete(['substitute', 'ARG', 'tags.count']) \
+    assert hlwm.complete(command_prefix) \
         == sorted(['ARG'] + cmdlist)
 
 
