@@ -7,6 +7,7 @@ Current git version
   * When an application fails to focus itself (because
     focus_stealing_prevention is active), then the window is marked as urgent.
   * New optional argument for the 'split' command for splitting non-leaf frames
+  * New command 'foreach' for iterating over objects
   * New attribute 'urgent_count' for tags, counting the number of urgent clients on a tag
   * New rule consequence 'floatplacement' that updates the placement of floating
     clients ('floatplacement=smart' for little overlap,
